Se va a hacer el deploy

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -98,7 +98,7 @@
                 <button 
                   class="w-full mt-2 h-12 rounded-lg border-2 border-gray-900 text-gray-900 font-bold hover:bg-gray-100 transition-colors" 
                   (click)="abrirModalVerificar()">
-                  Verificar Email para Verificar Tickets
+                  Ingresar Email para Verificar Tickets
                 </button>
               </div>
             </article>
